src/css/elements.css
/* TODO: Tidy, annotate, and consolidate */

html,
body {
  font-family: var(--fontFamilySansSerif);
  font-size: 16px;
  min-height: 100%;
}

@media (min-width: 800px) {
  html,
  body {
    font-size: 20px;
  }
}

html {
  background-color: var(--backgroundColor);
  transition-duration: 600ms;
  transition-property: background-color, color;
  transition-timing-function: ease-in-out;
}

body {
  background-color: var(--backgroundOverlayColor);
  color: var(--textColor);
  line-height: 1.5;
  text-rendering: optimizeLegibility;
  transition-duration: 600ms;
  transition-property: background-color, color;
  transition-timing-function: ease-in-out;
  min-height: 100vh;
}

body::after {
  animation-duration: 8s;
  animation-iteration-count: infinite;
  animation-name: grain;
  animation-timing-function: steps(10);
  background-image: url('/images/textures/noise.png');
  background-repeat: repeat;
  content: '';
  display: block;
  height: 300vh;
  left: -100vw;
  opacity: 0.25;
  pointer-events: none;
  position: fixed;
  top: -100vh;
  width: 300vw;
  z-index: -1;
}

@media (min-width: 480px) {
  body::before {
    background-color: currentColor;
    content: '';
    height: 4px;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 10;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--colorGreyDarker);
  margin-bottom: 0.5rem;
  margin-top: 0;
  padding-top: 0.5rem;
}

ul,
ol {
  margin-top: 0;
}

h1 {
  align-self: flex-end;
  font-family: var(--fontFamilySerif);
  font-size: var(--fontSizeLargest);
  font-weight: 700;
  line-height: 1.05;
  margin: 0;
  position: relative;
  text-shadow: none;
}

h2 {
  font-family: var(--fontFamilySerif);
  font-size: var(--fontSizeLarger);
  font-weight: 700;
  line-height: 1.1;
}

h3 {
  font-family: var(--fontFamilySerif);
  font-size: var(--fontSizeLarge);
  font-weight: 500;
  line-height: 1.25;
}

h4 {
  font-size: var(--fontSizeLarge);
  font-weight: 500;
}

h5 {
  font-family: var(--fontFamilySerif);
  font-size: var(--fontSizeMedium);
  font-weight: 500;
  line-height: 1.25;
}

h6 {
  color: var(--colorGreyLight);
  font-family: var(--fontFamilySansSerif);
  font-size: var(--fontSizeSmaller);
  font-weight: 500;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

section {
  margin-bottom: var(--spaceDefault);
}

@media (min-width: 800px) {
  section {
    margin-bottom: var(--spaceMedium);
  }
}

p {
  margin-top: 0;
  margin-bottom: var(--spaceDefault);
  color: var(--colorGreyDarker);
}

@media (prefers-color-scheme: dark) {
  p {
    color: inherit;
  }
}

ol,
ul {
  list-style-position: inside;
  margin-left: 0;
  padding-left: 0;
}

@media (min-width: 800px) {
  ol,
  ul {
    list-style-position: outside;
  }
}

ul {
  list-style-type: none;
  margin-bottom: 1rem;
}

li {
  margin-bottom: 0;
}

a {
  color: inherit;
  text-decoration-color: var(--colorGreyDark);
  transition: color, text-decoration-color var(--transitionFast);
}

a:hover {
  text-decoration-color: var(--colorBlack);
}

@media (prefers-color-scheme: dark) {
  a:hover {
    color: var(--colorGreyLightest);
    text-decoration-color: currentColor;
  }
}

a[target='_blank'] {
  font-variant-numeric: tabular-nums;
}

a[target='_blank']::after {
  content: '↯';
  display: inline-block;
  opacity: 0.4;
  position: absolute;
  transform: rotate(225deg) translateY(0.2rem) translateX(-0.2rem);
  transition: opacity var(--transitionSlow);
  will-change: opacity;
}

a[target='_blank']:hover::after {
  opacity: 0.8;
  transition: opacity var(--transitionFast);
}

img,
video {
  display: block;
  width: 100%;
}

hr {
  background-color: transparent;
  border-bottom: 1px solid var(--colorFaded);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--colorFaded);
  height: 4px;
  margin-bottom: var(--spaceMedium);
  margin-top: var(--spaceMedium);
}

blockquote {
  display: block;
  margin-left: 0;
  padding-bottom: 0.5rem;
  padding-left: 2.5rem;
  padding-top: 0.5rem;
  position: relative;
}

blockquote::before {
  color: var(--colorLinenDark);
  content: '“';
  font-family: var(--fontFamilySerif);
  font-size: 4rem;
  left: 0;
  position: absolute;
  top: -1rem;
}

blockquote p {
  display: inline;
  font-family: var(--fontFamilySerif);
  font-size: var(--fontSizeLarge);
  line-height: 1.25;
}

@media (min-width: 800px) {
  blockquote {
    padding-left: 0;
  }

  blockquote::before {
    left: -2.75rem;
  }
}

